--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
   nginx:
     image: nginx:latest
-    container_name: 'website_nginx'
+    container_name: '${COMPOSE_PROJECT_NAME}_nginx'
     ports:
       - 7080:80
     volumes:
@@ -11,4 +11,11 @@ services:
       - ../_site:/var/www/html
     environment:
       NGINX_STATIC_CONTENT_OPEN_FILE_CACHE: "off"
+
+  jekyllproc:
+    image: jekyll/jekyll:3.8
+    container_name: '${COMPOSE_PROJECT_NAME}_jekyll'
+    volumes:
+      - .:/srv/jekyll
+      - ./vendor/bundle:/usr/local/bundle
 
