--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,50 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-author: Matthew E. Denson
 title: Holiness Fellowship
-email: matthew@densons.org
 name: Holiness Fellowship
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   At the Holiness Fellowship, our focus is holiness in the Wesleyan tradition.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: ""
 url: "https://holinessfellowship.github.io"
 
-# Build settings
-markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
+author: Matthew E. Denson
+email: matthew@densons.org
+facebook_username: Sequim-Holiness-Church-109701320399932
+
+# plugins:
+#   - jekyll-feed
 permalink: /blog/:categories/:year/:month/:day/:title.html
+
+markdown: kramdown
+
+css: inline
+sass:
+  style: compressed
+
+
+# Defaults
+
+# Enable is_post test for posts
+# Enable is_page test for pages
+# Enable is_home test for home page
+# Use {% if page.is_post %} etc.
+defaults:
+  -
+    scope:
+      path: ""
+      layout: home
+    values:
+      is_home: true
+  -
+    scope:
+      path: ""
+      type: posts
+    values:
+      is_post: true
+  -
+    scope:
+      path: ""
+      type: pages
+    values:
+      is_page: true
 
 exclude:
   - Gemfile
@@ -40,25 +57,3 @@ exclude:
   - vendor/gems/
   - vendor/ruby/
 
-  # Delete the lines you don't need
-# about 5 elements are recomended
-#github_username:  dashingcode
-#codepen_username: your_codepen_username_goes_here
-facebook_username: Sequim-Holiness-Church-109701320399932
-#vk_username: your_vk_username_goes_here
-#twitter_username: your_twitter_username_goes_here
-#google_plus_username: your_google_plus_username_goes_here
-#linkedin_username: your_linked_in_username_goes_here
-#vine_username:  your_vine_username_goes_here
-#instagram_username:  your_instagram_username_goes_here
-#flickr_username: your_flickr_username_goes_here
-#steam_username: your_steam_username_goes_here
-#soundcloud_username:  your_soundcloud_username_goes_here
-#stack_of_username: your_stack_overflow_account_id_number_goes_here
-#reddit_username: your_reddit_username_goes_here
-#medium_username:  your_medium_username_goes_here
-#tumblr_username: your_tumblr_username_goes_here
-#weibo_username: your_weibo_username_goes_here
-#lastfm_username: your_lastfm_username_goes_here
-#blog_url: "/blog"
-#public_key_url: "https://raw.pastebin.com/LINK-TO-PUBLIC-KEY"
