--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,6 +16,6 @@ services:
     image: jekyll/jekyll:3.8
     container_name: '${COMPOSE_PROJECT_NAME}_jekyll'
     volumes:
-      - .:/srv/jekyll
-      - ./vendor/bundle:/usr/local/bundle
+      - ..:/srv/jekyll
+      - ../vendor/bundle:/usr/local/bundle
 
