--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Narrow Way Church
 name: Narrow Way Church
 description: >-
-  At the Narrow Way Church, we want to follow Jesus as He leads us on the narrow way.
+  At the Narrow Way Church, our desire is to glorify Jesus as He leads us on His narrow way.
 baseurl: ""
 url: "https://narrowwaychurch.github.io"
 
