--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Narrow Way Church
 name: Narrow Way Church
 description: >-
-  At the Narrow Way Church, our desire is to glorify Jesus as He leads us on His narrow way.
+  For the gate is small and the way is narrow that leads to life…. Matthew 7:14
 baseurl: ""
 url: "https://narrowwaychurch.github.io"
 
