Add Ministry Fair page

--- a/docker/nginx/site.conf
+++ b/docker/nginx/site.conf
@@ -2,6 +2,9 @@ server
 {
     listen  80;
     server_name localhost;
+    absolute_redirect off;
     index index.html;
     root /var/www/html;
+
+    rewrite ^/ministryfair2026$ /ministryfair2026.html;
 }
